# chunkhound

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.ubuntu20  IDE-SETUP.md  LICENSE  Makefile  README.md  chunkhound-fast  chunkhound-optimized.spec  chunkhound.spec  cli_wrapper.py  docker-compose.build.yml  mcp_launcher.py  mcp_prototype.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  spec.md  test_api.py  test_embeddings.py
.claude/commands/: plan-feature.md  qa.md
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-platform-build.yml  publish.yml  quality.yml  status.yml  test-windows-only.yml  test-windows.yml
.performance/: metrics.json
.performance/reports/: cache-analysis-20250612-091343.md  performance-report-20250612-091522.md
.zed/: settings.json  tasks.json
chunkhound/: __init__.py  api.py  chunker.py  cli.py  config.py  database.py  embeddings.py  file_discovery_cache.py  file_watcher.py  mcp_entry.py  mcp_server.py  parser.py  periodic_indexer.py  process_detection.py  server.py  signal_coordinator.py  task_coordinator.py  tree_cache.py
chunkhound/api/: __init__.py
chunkhound/core/: __init__.py
core/: __init__.py
core/exceptions/: __init__.py  core.py
core/models/: __init__.py  chunk.py  embedding.py  file.py
core/types/: __init__.py  common.py
docs/: ARCHITECTURE.md  CLI_GUIDE.md  CROSS_PLATFORM_BUILD.md  DOCKER_BUILD.md  PHASE3_CICD_OPTIMIZATION.md  STANDALONE_BUILD.md  TROUBLESHOOTING.md  bge-in-icl-guide.md
docs/bge-in-icl/: configuration-reference.md  deployment-guide.md  monitoring-setup.md  performance-tuning.md
docs/examples/: advanced-config.yaml  basic-config.yaml  local-config.yaml  production-config.yaml
examples/: README.md  bge_icl_performance_benchmark.py  bge_in_icl_phase3_demo.py  csharp_example.cs  path_filtering_demo.py
interfaces/: __init__.py  database_provider.py  embedding_provider.py  language_parser.py
providers/: __init__.py
providers/database/: __init__.py  duckdb_provider.py
providers/embeddings/: README.md  __init__.py  batch_utils.py  openai_provider.py
providers/parsing/: __init__.py  base_parser.py  bash_parser.py  c_parser.py  cpp_parser.py  csharp_parser.py  go_parser.py  groovy_parser.py  java_parser.py  javascript_parser.py  kotlin_parser.py  makefile_parser.py  markdown_parser.py  matlab_parser.py  python_parser.py  rust_parser.py  text_parser.py  toml_parser.py  typescript_parser.py
registry/: __init__.py
scripts/: build.sh  build_standalone.sh  dev-setup.sh  mcp-server.sh  prepare_release.sh  setup.sh  test-examples.sh  validate.sh
scripts/backup/: build-all-platforms.sh  docker-build-all.sh
services/: __init__.py  base_service.py  embedding_service.py  indexing_coordinator.py  search_service.py
tests/: __init__.py  manual_test_modification.py  test_api_simple.py  test_bge_in_icl.py  test_bge_in_icl_phase3.py  test_config.py  test_csharp_parser.py  test_database_incremental.py  test_embeddings.py  test_file_modification.py  test_incremental_chunker.py  test_incremental_parsing.py  test_java_parser.py  test_live_indexing_embeddings.py  test_package_resolution.py  test_process_coordination.py  test_process_detection.py  test_reindexing_fix.py  test_signal_coordinator.py  test_tree_cache.py
tests/integration/: test_bge_icl_integration.py  test_java_indexing.py  test_mcp_ci.py
tickets/: 2025-06-22 - [BUG] Complex Regex Pattern Matching Failures.md  2025-06-22 - [BUG] Duplicate Chunks After File Edits.md  2025-06-22 - [BUG] Search Response Size Exceeds MCP Token Limits.md  2025-06-22 - [BUG] Ubuntu Binary GLIBC Compatibility Issue.md  2025-06-23-bug-empty-chunk-filtering.md  2025-06-23-bug-empty-text-placeholders.md  2025-06-23-bug-macos-intel-uv-path-issue.md  2025-06-23-bug-openai-token-limit-exceeded.md  2025-06-23-bug-typescript-parser-separation.md  2025-06-23-bug-ubuntu-docker-build-timeout.md  2025-06-23-bug-windows-pyinstaller-missing-imports.md  2025-06-23-cleanup-code-quality-issues.md  2025-06-23-enhancement-github-actions-windows-integration-success.md  2025-06-24-enhance-search-pagination-support.md  2025-06-24-missing-language-indexing-support.md  2025-06-25-add-indexing-health-check.md  2025-06-25-background-periodic-indexing.md  2025-06-25-docstring-comment-indexing-gaps.md  2025-06-25-embedding-cache-optimization.md  2025-06-26-bug-bash-makefile-indexing-failure.md  2025-06-26-hnsw-index-wal-recovery-issue.md  2025-06-27-duckdb-crash.md  2025-06-27-unified-configuration-system.md  CLAUDE.md  move_closed.sh
tickets/closed/: 2025-06-21 - [BUG] Broken File Updates.md  2025-06-22 - [BUG] Complex Regex Pattern Matching Failures.md  2025-06-23-bug-empty-chunk-filtering.md  2025-06-23-bug-empty-symbol-validation.md  2025-06-23-bug-empty-text-placeholders.md  2025-06-23-bug-file-change-detection.md  2025-06-23-bug-javascript-method-extraction.md  2025-06-23-bug-openai-token-limit-exceeded.md  2025-06-23-bug-typescript-method-extraction.md  2025-06-23-bug-ubuntu-docker-build-timeout.md  2025-06-23-bug-windows-pyinstaller-missing-imports.md  2025-06-23-cleanup-code-quality-issues.md  2025-06-24-bash-language-support.md  2025-06-24-cpp-language-support.md  2025-06-24-go-language-support.md  2025-06-24-groovy-language-support.md  2025-06-24-makefile-language-support.md  2025-06-24-mcp-search-responsiveness-priority-queue.md  2025-06-24-missing-language-indexing-support.md  2025-06-24-rust-language-support.md  2025-06-24-toml-language-support.md  2025-06-25-add-path-filtering-to-mcp-search-tools.md  2025-06-25-background-periodic-indexing.md  2025-06-25-bug-mcp-server-infinite-loop-cpu-spike.md  2025-06-25-docstring-comment-indexing-gaps.md  2025-06-25-duckdb-wal-corruption-on-server-exit.md  2025-06-25-language-parser-failures.md  2025-06-25-markdown-indexing-failure.md  (+8 more)
tools/: explore_java_ast.py  java_parser_implementation.py
(+27 files in other folders)
