[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chunkhound"
version = "1.2.0"
description = "Local-first semantic code search with vector and regex capabilities for AI assistants via MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Ofri Wolfus"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "duckdb>=0.8.0",
    "openai>=1.0.0",
    "aiohttp>=3.8.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-markdown",
    "tree-sitter-language-pack>=0.7.3",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "loguru>=0.6.0",
    "mcp>=1.0.0",
    "watchdog>=4.0.0",
    "psutil>=5.8.0",
    "PyYAML>=6.0.0",
    "tiktoken>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.scripts]
chunkhound = "chunkhound.api.cli.main:main"
chunkhound-mcp = "chunkhound.mcp_entry:main_sync"

[project.urls]
Homepage = "https://github.com/chunkhound/chunkhound"
Repository = "https://github.com/chunkhound/chunkhound"
Issues = "https://github.com/chunkhound/chunkhound/issues"
Documentation = "https://github.com/chunkhound/chunkhound#readme"
Changelog = "https://github.com/chunkhound/chunkhound/releases"

[tool.hatch.build.targets.wheel]
packages = ["chunkhound", "core", "interfaces", "providers", "services", "registry"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.7",
    "pyinstaller>=6.14.1",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]
